Crash when using controlled node link swapping #105849

Closed
opened 2023-03-17 03:08:36 +01:00 by Aaron Carlisle · 4 comments
Member

System Information
Operating system: Linux-6.2.0-76060200-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Ti Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.89.02

Blender Version
Broken: version: 3.6.0 Alpha, branch: maser, hash: 025beb2cdad0d6d6d0f522d4be5a76a4ab6146a3

Short description of error
This is based on the feature added in 89aae4ac82.
When holding alt and making the node connection Blender will crash.

Exact steps for others to reproduce the error
With the included blend-file, grab the link from the "Vector" socket, press and hold Alt, then connect it to the "Translation" socket.

**System Information** Operating system: Linux-6.2.0-76060200-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Ti Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.89.02 **Blender Version** Broken: version: 3.6.0 Alpha, branch: maser, hash: `025beb2cdad0d6d6d0f522d4be5a76a4ab6146a3` **Short description of error** This is based on the feature added in 89aae4ac82e. When holding alt and making the node connection Blender will crash. **Exact steps for others to reproduce the error** With the included blend-file, grab the link from the "Vector" socket, press and hold Alt, then connect it to the "Translation" socket.
Aaron Carlisle added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-03-17 03:08:37 +01:00
Aaron Carlisle added this to the Nodes & Physics project 2023-03-17 03:09:08 +01:00

This hit BLI_assert(this->size() > 0) in

 	blender.exe!blender::Vector<bNodeLink *,4,blender::GuardedAllocator>::first() Řádek 692	C++
 	blender.exe!blender::ed::space_node::displace_links(bNodeTree * ntree, const bNode * node, bNodeLink * inserted_link) Řádek 903	C++
 	blender.exe!blender::ed::space_node::node_displace_existing_links(blender::ed::space_node::bNodeLinkDrag & nldrag, bNodeTree & ntree) Řádek 951	C++
 	blender.exe!blender::ed::space_node::add_dragged_links_to_tree(bContext & C, blender::ed::space_node::bNodeLinkDrag & nldrag) Řádek 1041	C++
 	blender.exe!blender::ed::space_node::node_link_modal(bContext * C, wmOperator * op, const wmEvent * event) Řádek 1242	C++
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const char * kmi_idname) Řádek 2458	C++
 	blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Řádek 3369	C++
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 3419	C++
 	blender.exe!wm_event_do_handlers(bContext * C) Řádek 4020	C++
 	blender.exe!WM_main(bContext * C) Řádek 644	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 588	C

This hit `BLI_assert(this->size() > 0)` in ``` blender.exe!blender::Vector<bNodeLink *,4,blender::GuardedAllocator>::first() Řádek 692 C++ blender.exe!blender::ed::space_node::displace_links(bNodeTree * ntree, const bNode * node, bNodeLink * inserted_link) Řádek 903 C++ blender.exe!blender::ed::space_node::node_displace_existing_links(blender::ed::space_node::bNodeLinkDrag & nldrag, bNodeTree & ntree) Řádek 951 C++ blender.exe!blender::ed::space_node::add_dragged_links_to_tree(bContext & C, blender::ed::space_node::bNodeLinkDrag & nldrag) Řádek 1041 C++ blender.exe!blender::ed::space_node::node_link_modal(bContext * C, wmOperator * op, const wmEvent * event) Řádek 1242 C++ blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const char * kmi_idname) Řádek 2458 C++ blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Řádek 3369 C++ blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Řádek 3419 C++ blender.exe!wm_event_do_handlers(bContext * C) Řádek 4020 C++ blender.exe!WM_main(bContext * C) Řádek 644 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Řádek 588 C ```

Seems that when displacing links it doesn't check if there's any link could be displaced. I made a simple fix and will create a pull request later.

Seems that when displacing links it doesn't check if there's any link could be displaced. I made a simple fix and will create a pull request later.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-17 13:59:43 +01:00
Member

@Kaicheng-Zhou sry, started working on this shortly before your comment and didn't notice it until now..

@Kaicheng-Zhou sry, started working on this shortly before your comment and didn't notice it until now..

@JacquesLucke Ahh it's ok LOL

@JacquesLucke Ahh it's ok LOL
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105849
No description provided.