Fix #105849: crash when using link-swap with an existing link

The code didn't check if there was actually a link to displace.